--- a/DNApp/Base.lproj/Main.storyboard
+++ b/DNApp/Base.lproj/Main.storyboard
@@ -29,7 +29,7 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nKV-r2-Bxl">
                                 <rect key="frame" x="260" y="20" width="60" height="44"/>
                                 <connections>
-                                    <segue destination="dw6-KR-CNG" kind="presentation" identifier="showLogin" modalTransitionStyle="crossDissolve" id="tfI-Qq-CKR"/>
+                                    <segue destination="dw6-KR-CNG" kind="presentation" identifier="showLogin" modalPresentationStyle="overCurrentContext" modalTransitionStyle="crossDissolve" id="tfI-Qq-CKR"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kCv-5Z-Tj0">
@@ -226,48 +226,140 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hkM-Bw-28o">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="OYi-kz-Te6">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <blurEffect style="dark"/>
+                            </visualEffectView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GDO-n0-Olt">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                                 <connections>
                                     <segue destination="UFD-55-ddi" kind="unwind" unwindAction="unwindToViewController:" id="Owm-Y8-a7x"/>
                                 </connections>
                             </button>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="Prototype-Dialog" translatesAutoresizingMaskIntoConstraints="NO" id="YLr-Ku-p08" customClass="SpringImageView" customModule="DNApp" customModuleProvider="target">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2UN-gd-yVl" customClass="DesignableView" customModule="DNApp" customModuleProvider="target">
                                 <rect key="frame" x="160" y="160" width="280" height="280"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Log in to" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7lm-WK-oIo">
+                                        <rect key="frame" x="100" y="25" width="80" height="28"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="20"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Designer News" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e3N-X1-eWh">
+                                        <rect key="frame" x="69" y="56" width="142" height="28"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-DemiBold" family="Avenir Next" pointSize="20"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Email" textAlignment="natural" minimumFontSize="17" background="input-outline" translatesAutoresizingMaskIntoConstraints="NO" id="724-H7-s1H" customClass="DesignableTextField" customModule="DNApp" customModuleProvider="target">
+                                        <rect key="frame" x="15" y="108" width="250" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="YIQ-Wt-lNR"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" keyboardType="emailAddress"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="leftPadding">
+                                                <real key="value" value="50"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="rightPadding">
+                                                <real key="value" value="10"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" background="input-outline" translatesAutoresizingMaskIntoConstraints="NO" id="qc1-tT-1KB" customClass="DesignableTextField" customModule="DNApp" customModuleProvider="target">
+                                        <rect key="frame" x="15" y="160" width="250" height="44"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="rra-vn-Q4F"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="leftPadding">
+                                                <real key="value" value="50"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="rightPadding">
+                                                <real key="value" value="10"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </textField>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="icon-mail" translatesAutoresizingMaskIntoConstraints="NO" id="sMF-lf-p0B">
+                                        <rect key="frame" x="30" y="121" width="26" height="18"/>
+                                    </imageView>
+                                    <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="icon-password" translatesAutoresizingMaskIntoConstraints="NO" id="H5n-eX-ebm">
+                                        <rect key="frame" x="30" y="170" width="25" height="25"/>
+                                    </imageView>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Um-Yq-w94" customClass="DesignableButton" customModule="DNApp" customModuleProvider="target">
+                                        <rect key="frame" x="15" y="212" width="250" height="44"/>
+                                        <color key="backgroundColor" red="0.17254901960784313" green="0.38823529411764707" blue="0.82352941176470584" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="uYi-7X-onc"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                        <state key="normal" title="Log In">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="3"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="280" id="WHZ-x8-Zdb"/>
-                                    <constraint firstAttribute="width" constant="280" id="vzH-sE-xps"/>
+                                    <constraint firstItem="2Um-Yq-w94" firstAttribute="top" secondItem="qc1-tT-1KB" secondAttribute="bottom" constant="8" id="ATB-lp-ibD"/>
+                                    <constraint firstItem="sMF-lf-p0B" firstAttribute="centerY" secondItem="724-H7-s1H" secondAttribute="centerY" id="Amf-c0-1c2"/>
+                                    <constraint firstAttribute="height" constant="280" id="BEZ-Z3-5cd"/>
+                                    <constraint firstItem="724-H7-s1H" firstAttribute="leading" secondItem="2UN-gd-yVl" secondAttribute="leading" constant="15" id="Chi-BR-Oqj"/>
+                                    <constraint firstItem="qc1-tT-1KB" firstAttribute="leading" secondItem="2UN-gd-yVl" secondAttribute="leading" constant="15" id="CjR-Kg-jpk"/>
+                                    <constraint firstAttribute="trailing" secondItem="724-H7-s1H" secondAttribute="trailing" constant="15" id="D65-FX-PEb"/>
+                                    <constraint firstItem="qc1-tT-1KB" firstAttribute="top" secondItem="724-H7-s1H" secondAttribute="bottom" constant="8" id="E1I-ax-YbC"/>
+                                    <constraint firstItem="724-H7-s1H" firstAttribute="leading" secondItem="sMF-lf-p0B" secondAttribute="trailing" constant="-41" id="F7s-ff-kS3"/>
+                                    <constraint firstItem="2Um-Yq-w94" firstAttribute="leading" secondItem="2UN-gd-yVl" secondAttribute="leading" constant="15" id="HEz-7d-4Ic"/>
+                                    <constraint firstItem="7lm-WK-oIo" firstAttribute="centerX" secondItem="2UN-gd-yVl" secondAttribute="centerX" id="I6m-TU-UDu"/>
+                                    <constraint firstItem="H5n-eX-ebm" firstAttribute="centerY" secondItem="qc1-tT-1KB" secondAttribute="centerY" id="MFd-XY-LEU"/>
+                                    <constraint firstAttribute="bottom" secondItem="2Um-Yq-w94" secondAttribute="bottom" constant="24" id="Ovt-PZ-hGi"/>
+                                    <constraint firstItem="qc1-tT-1KB" firstAttribute="leading" secondItem="H5n-eX-ebm" secondAttribute="trailing" constant="-40" id="c6i-42-xkL"/>
+                                    <constraint firstAttribute="width" constant="280" id="eDA-DA-g1w"/>
+                                    <constraint firstItem="7lm-WK-oIo" firstAttribute="top" secondItem="2UN-gd-yVl" secondAttribute="top" constant="25" id="j1S-66-XrS"/>
+                                    <constraint firstAttribute="trailing" secondItem="qc1-tT-1KB" secondAttribute="trailing" constant="15" id="niC-Le-Mox"/>
+                                    <constraint firstItem="e3N-X1-eWh" firstAttribute="centerX" secondItem="7lm-WK-oIo" secondAttribute="centerX" id="pUT-5n-nKa"/>
+                                    <constraint firstAttribute="trailing" secondItem="2Um-Yq-w94" secondAttribute="trailing" constant="15" id="uDa-O7-OQD"/>
+                                    <constraint firstItem="e3N-X1-eWh" firstAttribute="top" secondItem="7lm-WK-oIo" secondAttribute="bottom" constant="3" id="ztt-U2-6mt"/>
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <real key="value" value="3"/>
+                                    </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="autostart" value="YES"/>
                                     <userDefinedRuntimeAttribute type="string" keyPath="animation" value="zoomIn"/>
                                 </userDefinedRuntimeAttributes>
-                            </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6fV-6v-b4s">
-                                <rect key="frame" x="257" y="470" width="86" height="37"/>
-                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
-                                <state key="normal" title="Skip Login">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                            </button>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" red="0.23921568630000001" green="0.25490196079999999" blue="0.30196078430000001" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="YLr-Ku-p08" firstAttribute="centerY" secondItem="cCw-SK-1Wl" secondAttribute="centerY" id="3XQ-H7-jCq"/>
-                            <constraint firstItem="6fV-6v-b4s" firstAttribute="centerX" secondItem="YLr-Ku-p08" secondAttribute="centerX" id="CUH-Br-gza"/>
-                            <constraint firstItem="6fV-6v-b4s" firstAttribute="top" secondItem="YLr-Ku-p08" secondAttribute="bottom" constant="30" id="F5q-5F-I56"/>
+                            <constraint firstItem="hkM-Bw-28o" firstAttribute="leading" secondItem="cCw-SK-1Wl" secondAttribute="leading" id="Cki-ob-ukZ"/>
+                            <constraint firstItem="hkM-Bw-28o" firstAttribute="top" secondItem="cCw-SK-1Wl" secondAttribute="top" id="EF2-3Z-8el"/>
                             <constraint firstItem="GvP-L3-Prp" firstAttribute="top" secondItem="GDO-n0-Olt" secondAttribute="bottom" id="Fvk-8G-wyM"/>
+                            <constraint firstAttribute="trailing" secondItem="hkM-Bw-28o" secondAttribute="trailing" id="LfN-V2-c9c"/>
+                            <constraint firstItem="2UN-gd-yVl" firstAttribute="centerX" secondItem="GDO-n0-Olt" secondAttribute="centerX" id="UVu-Zi-5zt"/>
                             <constraint firstAttribute="trailing" secondItem="GDO-n0-Olt" secondAttribute="trailing" id="Vvv-MG-frh"/>
-                            <constraint firstItem="YLr-Ku-p08" firstAttribute="centerX" secondItem="cCw-SK-1Wl" secondAttribute="centerX" id="ZA5-So-PmK"/>
+                            <constraint firstItem="2UN-gd-yVl" firstAttribute="centerY" secondItem="GDO-n0-Olt" secondAttribute="centerY" id="bes-ye-fEs"/>
                             <constraint firstItem="GDO-n0-Olt" firstAttribute="leading" secondItem="cCw-SK-1Wl" secondAttribute="leading" id="fFn-xu-Onu"/>
                             <constraint firstItem="GDO-n0-Olt" firstAttribute="top" secondItem="cCw-SK-1Wl" secondAttribute="top" id="hRA-Hx-Wh6"/>
+                            <constraint firstItem="GvP-L3-Prp" firstAttribute="top" secondItem="hkM-Bw-28o" secondAttribute="bottom" id="qIO-un-0vv"/>
                         </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FlR-5c-niD" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="UFD-55-ddi" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="2130" y="162.67605633802816"/>
+            <point key="canvasLocation" x="2130" y="162"/>
         </scene>
     </scenes>
     <resources>
@@ -277,6 +369,8 @@
         <image name="5-Web" width="320" height="568"/>
         <image name="6-Comment" width="320" height="568"/>
         <image name="7-Learn" width="320" height="568"/>
-        <image name="Prototype-Dialog" width="280" height="280"/>
+        <image name="icon-mail" width="26" height="18"/>
+        <image name="icon-password" width="25" height="25"/>
+        <image name="input-outline" width="7" height="44"/>
     </resources>
 </document>
