--- a/DNApp/Base.lproj/Main.storyboard
+++ b/DNApp/Base.lproj/Main.storyboard
@@ -27,6 +27,11 @@
             <string>AvenirNext-Regular</string>
             <string>AvenirNext-Regular</string>
             <string>AvenirNext-Regular</string>
+            <string>AvenirNext-Regular</string>
+            <string>AvenirNext-Regular</string>
+            <string>AvenirNext-Regular</string>
+            <string>AvenirNext-Regular</string>
+            <string>AvenirNext-Regular</string>
         </mutableArray>
     </customFonts>
     <scenes>
@@ -256,7 +261,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="StoryCell" rowHeight="140" id="tQ4-dC-Dhk" customClass="StoryTableViewCell" customModule="DNApp" customModuleProvider="target">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="StoryCell" rowHeight="140" id="tQ4-dC-Dhk" customClass="StoryTableViewCell" customModule="DNApp" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="92" width="600" height="140"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tQ4-dC-Dhk" id="Jx3-Kp-Vpg">
@@ -369,6 +374,99 @@
                                     <outlet property="upvoteButton" destination="cuo-0o-WjY" id="Uwy-by-Wil"/>
                                 </connections>
                             </tableViewCell>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="CommentCell" rowHeight="119" id="UEP-Qs-a7S" customClass="CommentTableViewCell" customModule="DNApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="232" width="600" height="119"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="UEP-Qs-a7S" id="pJw-kH-rrT">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="118"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="IBx-02-6ji">
+                                            <rect key="frame" x="10" y="8" width="20" height="20"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="20" id="1ku-Gd-jma"/>
+                                                <constraint firstAttribute="height" constant="20" id="Bsi-B9-3yG"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JEo-nj-IOw">
+                                            <rect key="frame" x="35" y="8" width="520" height="22"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                            <color key="textColor" red="0.58431372549019611" green="0.65098039215686276" blue="0.70980392156862748" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="7h" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fVi-Yq-I8w">
+                                            <rect key="frame" x="574" y="8" width="18" height="21"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                            <color key="textColor" red="0.58823529409999997" green="0.65098039220000004" blue="0.70980392160000005" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2Z0-wt-B1n" customClass="SpringButton" customModule="DNApp" customModuleProvider="target">
+                                            <rect key="frame" x="25" y="33" width="70" height="33"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="70" id="sT6-Jf-XXw"/>
+                                                <constraint firstAttribute="height" constant="33" id="u1l-eM-awM"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                            <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                            <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                            <state key="normal" title="999" image="icon-upvote">
+                                                <color key="titleColor" red="0.58431372550000005" green="0.65098039220000004" blue="0.70980392160000005" alpha="1" colorSpace="calibratedRGB"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="upvoteButtonDidTouch:" destination="UEP-Qs-a7S" eventType="touchUpInside" id="UiV-w1-l2k"/>
+                                            </connections>
+                                        </button>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UjO-4H-vOI" customClass="SpringButton" customModule="DNApp" customModuleProvider="target">
+                                            <rect key="frame" x="95" y="33" width="70" height="33"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="70" id="ihE-p2-Ifp"/>
+                                                <constraint firstAttribute="height" constant="33" id="p9D-cc-fqv"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                            <inset key="contentEdgeInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                            <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                            <state key="normal" image="icon-reply">
+                                                <color key="titleColor" red="0.58431372550000005" green="0.65098039220000004" blue="0.70980392160000005" alpha="1" colorSpace="calibratedRGB"/>
+                                            </state>
+                                            <connections>
+                                                <action selector="replyButtonDidTouch:" destination="UEP-Qs-a7S" eventType="touchUpInside" id="TD7-VR-Gjh"/>
+                                            </connections>
+                                        </button>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" text="Text" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6JY-ft-HCQ" customClass="AutoTextView" customModule="DNApp" customModuleProvider="target">
+                                            <rect key="frame" x="35" y="69" width="550" height="38"/>
+                                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        </textView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="fVi-Yq-I8w" secondAttribute="trailing" constant="8" id="1Id-bO-yOS"/>
+                                        <constraint firstItem="6JY-ft-HCQ" firstAttribute="leading" secondItem="pJw-kH-rrT" secondAttribute="leading" constant="35" id="2Tm-YA-3fD"/>
+                                        <constraint firstItem="UjO-4H-vOI" firstAttribute="leading" secondItem="2Z0-wt-B1n" secondAttribute="trailing" id="3gE-6q-6Te"/>
+                                        <constraint firstItem="fVi-Yq-I8w" firstAttribute="top" secondItem="pJw-kH-rrT" secondAttribute="top" constant="8" id="4Vx-vj-87q"/>
+                                        <constraint firstItem="IBx-02-6ji" firstAttribute="top" secondItem="pJw-kH-rrT" secondAttribute="top" constant="8" id="9Ai-up-BjD"/>
+                                        <constraint firstItem="6JY-ft-HCQ" firstAttribute="top" secondItem="UjO-4H-vOI" secondAttribute="bottom" constant="3" id="9eu-2U-1xI"/>
+                                        <constraint firstItem="JEo-nj-IOw" firstAttribute="top" secondItem="pJw-kH-rrT" secondAttribute="top" constant="8" id="9zf-7T-jdi"/>
+                                        <constraint firstItem="UjO-4H-vOI" firstAttribute="top" secondItem="JEo-nj-IOw" secondAttribute="bottom" constant="3" id="DhJ-33-0yC"/>
+                                        <constraint firstItem="2Z0-wt-B1n" firstAttribute="leading" secondItem="pJw-kH-rrT" secondAttribute="leading" constant="25" id="Dkm-0c-B6J"/>
+                                        <constraint firstAttribute="bottom" secondItem="6JY-ft-HCQ" secondAttribute="bottom" constant="11" id="K0J-EL-04n"/>
+                                        <constraint firstItem="IBx-02-6ji" firstAttribute="leading" secondItem="pJw-kH-rrT" secondAttribute="leading" constant="10" id="Wze-65-X9I"/>
+                                        <constraint firstAttribute="trailing" secondItem="JEo-nj-IOw" secondAttribute="trailing" constant="45" id="YgK-pi-B1A"/>
+                                        <constraint firstItem="2Z0-wt-B1n" firstAttribute="top" secondItem="JEo-nj-IOw" secondAttribute="bottom" constant="3" id="bRT-Cw-TeP"/>
+                                        <constraint firstItem="JEo-nj-IOw" firstAttribute="leading" secondItem="IBx-02-6ji" secondAttribute="trailing" constant="5" id="i6X-WU-PIY"/>
+                                        <constraint firstAttribute="trailing" secondItem="6JY-ft-HCQ" secondAttribute="trailing" constant="15" id="qAg-Oz-Rd1"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <inset key="separatorInset" minX="35" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <connections>
+                                    <outlet property="authorLabel" destination="JEo-nj-IOw" id="oGW-5O-HGC"/>
+                                    <outlet property="avatarImageView" destination="IBx-02-6ji" id="o1N-dR-JQL"/>
+                                    <outlet property="commentTextView" destination="6JY-ft-HCQ" id="qrg-QE-31l"/>
+                                    <outlet property="replyButton" destination="UjO-4H-vOI" id="CHr-F0-bSh"/>
+                                    <outlet property="timeLabel" destination="fVi-Yq-I8w" id="hhA-MN-kOD"/>
+                                    <outlet property="upvoteButton" destination="2Z0-wt-B1n" id="IMd-dY-sot"/>
+                                </connections>
+                            </tableViewCell>
                         </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="WdE-9M-lsy" id="11E-B0-jkT"/>
@@ -381,7 +479,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UU6-EQ-XxN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1258" y="683"/>
+            <point key="canvasLocation" x="1321" y="666"/>
         </scene>
         <!--Learn View Controller-->
         <scene sceneID="yV0-c1-oz5">
@@ -821,6 +919,7 @@
         <image name="icon-hamburger" width="22" height="16"/>
         <image name="icon-mail" width="26" height="18"/>
         <image name="icon-password" width="25" height="25"/>
+        <image name="icon-reply" width="20" height="16"/>
         <image name="icon-sketch" width="64" height="61"/>
         <image name="icon-twitter" width="18" height="14"/>
         <image name="icon-upvote" width="18" height="16"/>
